--- a/index.html
+++ b/index.html
@@ -5,60 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-    <nav>
-        <a href="/">
-            WebStudio</a>
+    <header class="header">
+    <nav class="header-nav">
+        <a class="logo link" href="./index.html">
+            <span class="accent">Web</span>Studio</a>
 
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+        <ul class="header-list list">
+            <li class="header-ithem"><a class="nav-link link" href="./index.html">Студия</a></li>
+            <li class="header-ithem"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+            <li class="header-ithem"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
     </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="header-list list">
+            <li class="header-ithem"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-ithem"><a class="contact-link link" href="tel:+380961111111">+380961111111</a></li>
         
         </ul>
     
     </header>
     <main>
 
-        <section>
-            <h1>Эффективные решения для вашего бизнеса
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса
             </h1>
-            <button type="button">Заказать услугу</button>
+            <button class="button" type="button">Заказать услугу</button>
 
         </section>
 
-    <section>
-        <h2>наши приоритеты</h2>
+    <section class="about">
+        <h2 class="section-title">наши приоритеты</h2>
 
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <ul class="about-list">
+            <li class="about-item" >
+                <h3 class="about-subtitle">Внимание к деталям</h3>
+                <p class="about-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3>Планирование</h3>
                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>
+            <li class="about-item">
                 <h3>Современные технологии</h3>
                 <p>Значимость этих проблем настолько очевидна, что реализация плановыхзаданий.</p>
             </li>
         </ul>
     </section>
     <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
             <li>
                 <img src="./images/box1computer.jpg" alt="компьютер" width="370">
@@ -72,12 +74,12 @@
         </ul>
     </section>
     <section>
-        <h2>Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/man1.jpg" alt="мужчина1" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3 class="">Игорь Демьяненко</h3>
+                <p class="">Product Designer</p>
             </li>
             <li>
                 <img src="./images/woman2.jpg" alt="женщина2" width="270">
