--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <span class="accent">Web</span>Studio</a>
 
         <ul class="header-list list">
-            <li class="header-ithem"><a class="nav-link link" href="./index.html">Студия</a></li>
-            <li class="header-ithem"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-            <li class="header-ithem"><a class="nav-link link" href="">Контакты</a></li>
+            <li class="header-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+            <li class="header-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+            <li class="header-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
     </nav>
 
         <ul class="header-list list">
-            <li class="header-ithem"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-ithem"><a class="contact-link link" href="tel:+380961111111">+380961111111</a></li>
+            <li class="header-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item"><a class="contact-link link" href="tel:+380961111111">+380961111111</a></li>
         
         </ul>
     
@@ -46,71 +46,71 @@
                 <p class="about-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="about-item">
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="about-subtitle">Пунктуальность</h3>
+                <p class="about-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="about-item">
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="about-subtitle">Планирование</h3>
+                <p class="about-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="about-item">
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановыхзаданий.</p>
+                <h3 class="about-subtitle">Современные технологии</h3>
+                <p class="about-description">Значимость этих проблем настолько очевидна, что реализация плановыхзаданий.</p>
             </li>
         </ul>
     </section>
-    <section>
+    <section class="work">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-            <li>
+        <ul class="work-list">
+            <li class="work-item">
                 <img src="./images/box1computer.jpg" alt="компьютер" width="370">
             </li>
-            <li>
+            <li class="work-item">
                 <img src="./images/box2phone.jpg" alt="телефон" width="370">
             </li>
-            <li>
+            <li class="work-item">
                 <img src="./images/box3planchet.jpg" alt="планшет" width="370">
             </li>
         </ul>
     </section>
-    <section>
+    <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
-            <li>
+        <ul class="team-list">
+            <li class="team-item">
                 <img src="./images/man1.jpg" alt="мужчина1" width="270">
-                <h3 class="">Игорь Демьяненко</h3>
-                <p class="">Product Designer</p>
+                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                <p class="team- description">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/woman2.jpg" alt="женщина2" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-subtitle">Ольга Репина</h3>
+                <p class="team- description">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/man3.jpg" alt="мужчина3" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="team-subtitle">Николай Тарасов</h3>
+                <p class="team- description">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/man4.jpg" alt="мужчина4" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                <p class="team- description">UI Designer</p>
             </li>
         </ul>
     </section>
 </main>
-    <footer>
-        <a href="/">
-            WebStudio</a>
-        <ul>
-            <li>
-                <a href="ссылка google map"target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+    <footer class="footer">
+        <a class="logo link" href="/">
+            <span class="accent">Web</span>Studio</a>
+        <ul class="footer list">
+            <li class="footer-item">
+                <a class="nav-link link" href="ссылка google map"target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="footer list">
+                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">tel:+380961111111</a>
+            <li class="footer list">
+                <a class="contact-link link" href="tel:+380961111111">tel:+380961111111</a>
             </li>
         </ul>
     </footer>
