--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <span class="accent">Web</span>Studio</a>
 
         <ul class="header-list list">
-            <li class="header-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+            <li class="header-item"><a class="nav-link link current" href="./index.html">Студия</a></li>
             <li class="header-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
             <li class="header-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
     </nav>
 
         <ul class="header-list list">
-            <li class="header-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item"><a class="contact-link link current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="header-item"><a class="contact-link link" href="tel:+380961111111">+380961111111</a></li>
         
         </ul>
