--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             <span class="accent">Web</span>Studio</a>
         <ul class="footer list">
             <li class="footer-item">
-                <a class="nav-link link" href="ссылка google map"target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="nav-link link item" href="ссылка google map"target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer list">
-                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contact-link link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="footer list">
-                <a class="contact-link link" href="tel:+380961111111">tel:+380961111111</a>
+                <a class="contact-link link list" href="tel:+380961111111">tel:+380961111111</a>
             </li>
         </ul>
     </footer>
