--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
         <ul class="header-list list">
-            <li class="header-item"><a class="contact-link link current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item"><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="header-item"><a class="contact-link link" href="tel:+380961111111">+380961111111</a></li>
         
         </ul>
@@ -38,9 +38,9 @@
         </section>
 
     <section class="about">
-        <h2 class="section-title">наши приоритеты</h2>
+        <h2 class="section-title visually-hidden">наши приоритеты</h2>
 
-        <ul class="about-list">
+        <ul class="about-list list">
             <li class="about-item" >
                 <h3 class="about-subtitle">Внимание к деталям</h3>
                 <p class="about-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -61,38 +61,38 @@
     </section>
     <section class="work">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
+        <ul class="work-list list">
             <li class="work-item">
-                <img src="./images/box1computer.jpg" alt="компьютер" width="370">
+                <img src="./images/box1computer.jpg" alt="компьютер" width="370" />
             </li>
             <li class="work-item">
-                <img src="./images/box2phone.jpg" alt="телефон" width="370">
+                <img src="./images/box2phone.jpg" alt="телефон" width="370" />
             </li>
             <li class="work-item">
-                <img src="./images/box3planchet.jpg" alt="планшет" width="370">
+                <img src="./images/box3planchet.jpg" alt="планшет" width="370" />
             </li>
         </ul>
     </section>
     <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
             <li class="team-item">
-                <img src="./images/man1.jpg" alt="мужчина1" width="270">
+                <img src="./images/man1.jpg" alt="мужчина1" width="270" />
                 <h3 class="team-subtitle">Игорь Демьяненко</h3>
                 <p class="team- description">Product Designer</p>
             </li>
             <li class="team-item">
-                <img src="./images/woman2.jpg" alt="женщина2" width="270">
+                <img src="./images/woman2.jpg" alt="женщина2" width="270" />
                 <h3 class="team-subtitle">Ольга Репина</h3>
                 <p class="team- description">Frontend Developer</p>
             </li>
             <li class="team-item">
-                <img src="./images/man3.jpg" alt="мужчина3" width="270">
+                <img src="./images/man3.jpg" alt="мужчина3" width="270" />
                 <h3 class="team-subtitle">Николай Тарасов</h3>
                 <p class="team- description">Marketing</p>
             </li>
             <li class="team-item">
-                <img src="./images/man4.jpg" alt="мужчина4" width="270">
+                <img src="./images/man4.jpg" alt="мужчина4" width="270" />
                 <h3 class="team-subtitle">Михаил Ермаков</h3>
                 <p class="team- description">UI Designer</p>
             </li>
@@ -104,7 +104,7 @@
             <span class="accent">Web</span>Studio</a>
         <ul class="footer list">
             <li class="footer-item">
-                <a class="nav-link link item" href="ссылка google map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="adress-link link" href="ссылка google map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer list">
                 <a class="contact-link link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
