--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <span class="accent">Web</span>Studio</a>
         <ul class="footer list">
             <li class="footer-item">
-                <a class="adress-link link" href="ссылка google map" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="adress-link link" href="https://goo.gl/maps/D3uRbkzvZpGUqhTm6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer list">
                 <a class="contact-link link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
