--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a class="contact-link link list" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="footer list">
-                <a class="contact-link link list" href="tel:+380961111111">tel:+380961111111</a>
+                <a class="contact-link link list" href="tel:+380961111111">+380961111111</a>
             </li>
         </ul>
     </footer>
