--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                     <a class="contact-link link list " href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="footer list">
-                    <a class="contact-link link list" href="tel:+380961111111">tel:+380961111111</a>
+                    <a class="contact-link link list" href="tel:+380961111111">+380961111111</a>
                 </li>
             </ul>
         </footer>
